configure jitpack to use JDK 11