@@ -1,8 +1,6 @@
 package tla.domain.model;
 
-import java.util.AbstractMap.SimpleEntry;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedList;
@@ -11,7 +9,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.Map.Entry;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import com.fasterxml.jackson.annotation.JsonAnySetter;
 import com.fasterxml.jackson.annotation.JsonIgnore;
@@ -81,7 +78,7 @@ public class Passport {
         } else {
             this.properties.put(
                 key, 
-                new LinkedList<>(Arrays.asList(child))
+                new LinkedList<>(List.of(child))
             );
         }
     }
@@ -164,7 +161,7 @@ public class Passport {
         List<Passport> values = new LinkedList<Passport>();
         Object value = this.get();
         if (value != null) {
-            return Arrays.asList(this);
+            return List.of(this);
         } else {
             for (Entry<String, List<Passport>> e : this.properties.entrySet()) {
                 for (Passport child : e.getValue()) {
@@ -206,18 +203,11 @@ public class Passport {
         if (this.leafNodeValue != null) {
             return this.leafNodeValue;
         } else if (this.id != null) {
-            return Collections.unmodifiableMap(
-                Stream.of(
-                    new SimpleEntry<>("id", id),
-                    new SimpleEntry<>("name", name),
-                    new SimpleEntry<>("type", type),
-                    new SimpleEntry<>("eclass", eclass)
-                ).collect(
-                    Collectors.toMap(
-                        (e) -> e.getKey(),
-                        (e) -> e.getValue()
-                    )
-                )
+            return Map.of(
+                "id", this.id,
+                "eclass", this.eclass,
+                "type", this.type,
+                "name", this.name
             ).toString();
         } else {
             return this.properties.toString();
